--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@ sidebar: false
 order: 1
 no_groups: true
 ---
-<h5><i>Welcome to my little world!</i></h5><br>
+<h5><i>Welcome to my creative world.</i></h5><br>
 I'm <b>Caue Marcovich</b>, a game programmer/developer from São Paulo, Brazil.<br>
-Here, you will find out the most of the projects I've had the opportunity to work on.<br><br>
-I hope you enjoy your stay.
+Here, I show you the most of the projects I've worked and share details about my education and career path.<br>
+If you have any questions please feel free to contact me.<br><br>
+Take a look at my portfolio!
