Fixing the linkedin and changing the hello there page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ no_groups: true
 ---
 <h5><i>Welcome to my creative world.</i></h5><br>
 I'm <b>Caue Marcovich</b>, a game programmer/developer from São Paulo, Brazil.<br>
-Here, I show you the most of the projects I've worked and share details about my education and career path.<br>
-If you have any questions please feel free to contact me.<br><br>
-Take a look at my portfolio!
+
+Here, I show you the most of the projects I've worked and share details about my education and career path.<br><br>
+
+Take a look at my portfolio, and please reach out to me! I'm always looking for meaninful projects.
