--- a/index.html
+++ b/index.html
@@ -13,4 +13,5 @@ I'm <b>Caue Marcovich</b>, a game programmer/developer from São Paulo, Brazil.<
 
 Here, I show you the most of the projects I've worked and share details about my education and career path.<br><br>
 
-Take a look at my portfolio, and please reach out to me! I'm always looking for meaninful projects.
+I’m always up for a challenge, and looking for meaninful projects, so please get in touch.<br>
+Contact me via e-mail: <b>srmarcovich@gmail.com</b>
