--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ no_groups: true
 <h5><i>Welcome to my creative world.</i></h5><br>
 I'm <b>Caue Marcovich</b>, a game programmer/developer from São Paulo, Brazil.<br>
 
-Here, I show you the most of the projects I've worked and share details about my education and career path.<br><br>
+Here, I show you what I have been working on and share more about my education and career path.<br><br>
 
 I’m always up for a challenge, and looking for meaninful projects, so please get in touch.<br>
 Contact me via e-mail: <b>srmarcovich@gmail.com</b>
